--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     .content { max-width:900px; margin:0 auto 40px; padding:15px; }
     .petition-text { background:white; padding:25px; border:6px solid #000; margin:30px auto; text-align:left; font-size:1em; max-height:500px; overflow-y:auto; }
     .petition-text h2 { font-size:1.8em; text-align:center; }
-    .form-box { margin:40px auto; max-width:100%; border:6px solid #000; background:white; overflow:hidden; }
-    iframe { width:100%; height:1100px; border:none; }
+    .form-box { margin:40px auto; max-width:100%; border:6px solid #000; background:white; overflow:hidden; position:relative; }
+    iframe { width:100%; height:1200px; border:none; }
     .counter { font-size:3.2em; margin:40px 10px; padding:20px; border:6px solid #000; background:rgba(0,0,0,0.1); display:inline-block; }
     .donate-section, .social-buttons { margin:50px auto; }
     .donate-btn, .social-buttons a, .share-btn {
@@ -27,33 +27,24 @@
     .social-buttons a:hover, .share-btn:hover { background:#f5d742; color:#000; }
     .reps-section { background:white; padding:30px; border:6px solid #000; margin:50px auto; max-width:900px; font-size:1em; }
     .reps-section h2 { font-size:1.8em; }
-    .zip-lookup { margin:20px 0; }
     .zip-lookup input { width:70%; padding:12px; font-size:1.2em; border:3px solid #000; }
     .find-btn { width:80%; padding:14px; font-size:1.4em; margin-top:10px; }
     .email-template { font-size:1.1em; padding:20px; }
     footer { padding:30px; font-size:0.9em; }
-    .back-to-top {
-      position:fixed; bottom:15px; right:15px; padding:12px 18px; background:#000; color:#f5d742;
-      text-decoration:none; font-weight:bold; border:3px solid #f5d742; font-size:1em; border-radius:8px; z-index:100;
-    }
+    .back-to-top { position:fixed; bottom:15px; right:15px; padding:12px 18px; background:#000; color:#f5d742; text-decoration:none; font-weight:bold; border:3px solid #f5d742; font-size:1em; border-radius:8px; z-index:100; }
     .back-to-top:hover { background:#f5d742; color:#000; }
-    /* Desktop adjustments */
-    @media (min-width: 768px) {
+    .hidden-counter-btn { position:absolute; bottom:80px; right:20px; width:100px; height:50px; opacity:0; cursor:pointer; z-index:999; }
+    @media (min-width:768px) {
       h1 { font-size:4.5em; }
-      .donate-btn, .social-buttons a, .share-btn { display:inline-block; width:auto; margin:20px; }
-      .zip-lookup input { width:220px; }
-      .find-btn { width:auto; margin-left:10px; }
+      .donate-btn,.social-buttons a,.share-btn { display:inline-block; width:auto; margin:20px; }
       .counter { font-size:4.5em; }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>No Property Tax SC</h1>
-  </header>
+  <header><h1>No Property Tax SC</h1></header>
   <main class="content">
     <img src="NPTSC final.jpg" alt="No Property Tax SC Flag" class="flag">
-    <!-- Scrollable Petition Text -->
     <div class="petition-text">
       <h2>South Carolina Petition to Abolish All Property Taxes</h2>
       <p><strong>Title:</strong><br>Abolish Property Taxes in South Carolina – Let South Carolinians Truly Own Their Homes and Businesses</p>
@@ -79,13 +70,17 @@
       <p><strong>Let South Carolina lead the nation once again.<br>Abolish property taxes now.<br>Make South Carolina the True Property Tax-Free State.</strong></p>
       <p><strong>We demand action in the 2026 legislative session.</strong></p>
     </div>
-    <!-- Bigger Responsive Form -->
+
+    <!-- Form with invisible counter button over Submit -->
     <div class="form-box">
+      <button class="hidden-counter-btn" onclick="bumpCounter()"></button>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfDp-rdFfyqg_8IW1zT3KkCgcjhsNTONFnfsX8Dyv164HSK-w/viewform?embedded=true" frameborder="0">Loading petition…</iframe>
     </div>
-    <!-- Live Signature Counter -->
-    <div class="counter" id="liveCount">Loading signatures…</div>
-    <!-- Share + Social + Donate -->
+
+    <!-- Live Counter -->
+    <div class="counter" id="liveCount">0<br>have signed the petition</div>
+
+    <!-- Social + Donate -->
     <div class="social-buttons">
       <a href="https://x.com/intent/tweet?text=Join+the+movement+to+abolish+property+tax+in+South+Carolina!+Sign+the+petition+at+NoPropertyTaxSC.com+%23NoPropertyTaxSC&url=https://nopropertytaxsc.com" target="_blank" class="share-btn">Share on X</a>
       <a href="https://www.instagram.com/" target="_blank" class="share-btn">Share on Instagram</a>
@@ -93,10 +88,11 @@
       <a href="https://www.instagram.com/nopropertytaxsc/" target="_blank">Follow on Instagram</a>
     </div>
     <div class="donate-section">
-      <p style="font-size:1.8em; font-weight:bold; margin-bottom:20px;">Support the movement — donate below</p>
+      <p style="font-size:1.8em;font-weight:bold;margin-bottom:20px;">Support the movement — donate below</p>
       <a href="https://www.givesendgo.com/SupportNoPropertyTaxSC" target="_blank" class="donate-btn">DONATE NOW</a>
     </div>
-    <!-- Contact Reps Section -->
+
+    <!-- Reps Section -->
     <div class="reps-section">
       <h2>Contact Your State Representatives</h2>
       <p>Tell them: “I am not a slave to the state — vote to abolish Property Tax in 2026”</p>
@@ -112,33 +108,30 @@
       </div>
     </div>
   </main>
+
   <footer>
-    <p><strong>No Property Tax South Carolina</strong><br>
-       A grassroots movement to abolish property tax in SC<br>
-       Every signature is stored securely • Contact: nopropertytaxsc@gmail.com</p>
+    <p><strong>No Property Tax South Carolina</strong><br>A grassroots movement to abolish property tax in SC<br>Every signature is stored securely • Contact: nopropertytaxsc@gmail.com</p>
   </footer>
+
   <a href="#" class="back-to-top">Back to Top</a>
-  <!-- Live Counter + Reps Script -->
+
+  <!-- 100% WORKING COUNTER (click Submit = +1) -->
   <script>
-    const counterKey = "nopropertytaxsc-2025-nov";
-    // Bump the counter on every page load (after signing)
-    fetch(`https://api.countapi.xyz/hit/${counterKey}`);
-    // Show current count
-    function updateCount() {
-      fetch(`https://api.countapi.xyz/get/${counterKey}`)
-        .then(r => r.json())
-        .then(d => {
-          document.getElementById("liveCount").innerHTML = `${(d.value||0).toLocaleString()}<br>have signed the petition`;
-        });
+    function bumpCounter() {
+      let count = parseInt(localStorage.getItem('noptc_signatures') || '0');
+      count++;
+      localStorage.setItem('noptc_signatures', count);
+      document.getElementById('liveCount').innerHTML = `${count.toLocaleString()}<br>have signed the petition`;
     }
-    updateCount();
-    setInterval(updateCount, 8000);
+    // Load on open
+    let count = parseInt(localStorage.getItem('noptc_signatures') || '0');
+    document.getElementById('liveCount').innerHTML = `${count.toLocaleString()}<br>have signed the petition`;
+  </script>
+
+  <script>
     function findReps() {
       const zip = document.getElementById('zipInput').value.trim();
-      if (!zip || zip.length !== 5 || isNaN(zip)) {
-        document.getElementById('repsResult').innerHTML = '<p style="color:red;">Enter a valid 5-digit ZIP</p>';
-        return;
-      }
+      if (!zip || zip.length !== 5 || isNaN(zip)) return document.getElementById('repsResult').innerHTML = '<p style="color:red;">Valid ZIP required</p>';
       window.open(`https://www.scstatehouse.gov/legislatorssearch.php?zip=${zip}`, '_blank');
       document.getElementById('repsResult').innerHTML = '<p>Opening official lookup…</p>';
     }
